fix:Visibility for select option in event-card

--- a/student-support-frontend/StudentSupport/src/app/shared/components/event-card/event-card.component.css
+++ b/student-support-frontend/StudentSupport/src/app/shared/components/event-card/event-card.component.css
@@ -169,7 +169,7 @@ svg {
   border-radius: 5px;
   border: 2px solid var(--border-light-color);
   padding: 5px;
-  z-index: 1000;
+  z-index: 1500;
 }
 
 .menu-item{
